--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,58 +1,64 @@
 * {
     box-sizing: border-box;
-    font-family: Times;
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-    background-color: #FFFFFF;
-}
-
-h1 {
+body > h1 {
     text-align: center;
-    color: black;
+    font-size: 175%;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-section>h2 {
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
-    margin: 1px;
-    width: 300px;
-    text-align: center;
-    font-style: Times;
-    font-size: 20px;
-    font-weight: bold;
-    height: 50px;
-    padding-top: 10px;
-}
-
-section.palace>h2 {
-    background-color: #D6001C;
-}
-
-section.association>h2 {
-    background-color: #D6002C;
-}
-
-section.bens>h2 {
-    background-color: #D6003C;
-}
-
-section>p {
-    margin-top: 4em;
-    padding: 5px;
-    min-height: 450px;
+.container {
+    position: relative;
+    margin: 0px 20px;
 }
 
 .row {
     width: 100%;
 }
 
+.my-box > article {
+    position: relative;
+    border: 1px solid black;
+    background-color: lightgray;
+    margin: 10px;
+}
 
+.my-box > article > h2 {
+    position: absolute;
+    top: 0px;
+    right: -1px;
+    border: 1px solid black;
+    padding: 3px 20px;
+    font-size: 125%;
+}
 
-@media (min-width: 992px) {
-    .my-lg-col-4 {
+.my-box > article > p {
+    margin-top: 3em;
+    padding: 5px;
+    min-height: 450px;
+}
+
+.my-box:nth-child(1) > article > h2 {
+    background-color: lightcoral;
+}
+
+.my-box:nth-child(2) > article > h2 {
+    background-color: lightsalmon;
+}
+
+.my-box:nth-child(3) > article > h2 {
+    background-color: lightyellow;
+}
+
+@media (max-width: 767px) {
+    .my-sm-col-12 {
         float: left;
-        width: 33.33%;
+        width: 100%;
     }
 }
 
@@ -67,10 +73,9 @@ section>p {
     }
 }
 
-@media (max-width: 767px) {
-    .my-sm-col-12 {
+@media (min-width: 992px) {
+    .my-lg-col-4 {
         float: left;
-        width: 100%;
+        width: 33.33%;
     }
 }
-
