--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,59 +1,58 @@
 * {
     box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica;
 }
 
-body > h1 {
+body {
+    background-color: #d6d6d6;
+}
+
+h1 {
     text-align: center;
-    font-size: 175%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    color: black;
 }
 
-.container {
-    position: relative;
-    margin: 0px 20px;
+section {
+    border: 1px solid black;
+    background-color: #b5c4d2;
+    margin: 10px;
+}
+
+section>h2 {
+    float: right;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    margin: 0;
+    width: 230px;
+    text-align: center;
+    font-style: Times;
+    font-size: 24px;
+    font-weight: bold;
+    height: 45px;
+    padding-top: 10px;
+}
+
+section.lebesgue>h2 {
+    background-color: #76b8db;
+}
+
+section.fubini>h2 {
+    background-color: #4f7acd;
+}
+
+section.luzin>h2 {
+    color: #e2e2e2;
+    background-color: #10328a;
+}
+
+section>p {
+    padding: 40px 15px 15px 15px;
 }
 
 .row {
     width: 100%;
 }
 
-.my-box > article {
-    position: relative;
-    border: 1px solid black;
-    background-color: lightgray;
-    margin: 10px;
-}
-
-.my-box > article > h2 {
-    position: absolute;
-    top: 0px;
-    right: -1px;
-    border: 1px solid black;
-    padding: 3px 20px;
-    font-size: 125%;
-}
-
-.my-box > article > p {
-    margin-top: 3em;
-    padding: 5px;
-    min-height: 450px;
-}
-
-.my-box:nth-child(1) > article > h2 {
-    background-color: lightcoral;
-}
-
-.my-box:nth-child(2) > article > h2 {
-    background-color: lightsalmon;
-}
-
-.my-box:nth-child(3) > article > h2 {
-    background-color: lightyellow;
-}
 
 @media (max-width: 767px) {
     .my-sm-col-12 {
