--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -36,7 +36,7 @@ section.palace>h2 {
     background-color: #76b8db;
 }
 
-section.associations>h2 {
+section.association>h2 {
     background-color: #4f7acd;
 }
 
