--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,57 +1,44 @@
-* {
-    box-sizing: border-box;
-    font-family: Arial;
-}
-
 div {
-	background-color: white; 
-	border: 3px solid black; 
-	box-sizing: border-box; 
-	margin: 20px; 	
-	padding: 15px;
+	background-color lightblue;; 
+	border 3px solid black; 
+	box-sizing border-box; 
+	margin 20px; 	
+	padding 15px;
 	}
 
 	h1 {
-	  margin-bottom: 15px;
-	  text-align: center; 
+	  margin-bottom 15px;
+	  text-align center; 
 	}
 
 	p {
-	  border: 2px solid black;
-	  font-family: Arial; 
-	  font-weight: bold;
-	  text-align: center;  
-	  width: 100px;
-	  position: relative;
-		bottom: 33px;
-		left: 17px; 
-	  float: right; 
+	  border 2px solid black;
+	  font-family Helvetica; 
+	  font-weight bold;
+	  text-align center;  
+	  width 100px;
+	  position relative;
+		bottom 33px;
+		left 17px; 
+	  float right; 
 	}
 
 	.title1 {
-		{
-		float: left; 
-		border: 2px solid;  
-		}
-		background-color: lightyellow;
+		background-color yellow; 
 	}
 	.title2 {
-		{
-		float: left; 
-		border: 2px solid;  
-		}
-		background-color: red; 
+		background-color red; 
 	}
 	.title3 {
-		{
-		float: left; 
-		border: 2px solid;  
-		}
-		background-color: #FFE5B4;
+		background-color pink; 
 	}
 
 	@media (min-width 992px) {
-		.box1, .box2, .box3
+		.box1, .box2, .box3 {
+		float left; 
+		border 2px solid;  
+		box-sizing border-box;
+		}
 			
 		.box1 {
 		  width 30%;
@@ -69,6 +56,10 @@ div {
 
 	@media (min-width 768px) and (max-width 991px) {
 		.box1, .box2, .box3 {
+			float left; 
+			border 2px solid; 
+			box-sizing border-box;
+			}
 		.box1 {
 			width 40%;
 		}
@@ -81,7 +72,11 @@ div {
 
 	@media (min-width 767px) {
 		.box1, .box2, .box3 {
-
+			float left; 
+			border 2px solid; 
+			box-sizing border-box;
+			}
+		
 		.box1 {
 			width 100%;
 		}
