--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -21,9 +21,9 @@ section {
 section>h2 {
     float: left;
     border-bottom: 1px solid black;
-    border-left: 1px solid black;
+    border-right: 1px solid black;
     margin: 0;
-    width: 230px;
+    width: 400px;
     text-align: center;
     font-style: Times;
     font-size: 24px;
