--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -52,16 +52,16 @@ section>p {
     width: 100%;
 }
 @media (min-width: 992px) {
-    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+     .large-1, .large-2, .large-3 {
         float: left;
     }
-    .col-lg-4 {
+    .large-1 {
         width: 33.33%;
     }
-    .col-lg-6 {
+    .large-2 {
         width: 50%;
     }
-    .col-lg-12 {
+    .large-3 {
         width: 100%;
     }
 }
@@ -69,16 +69,16 @@ section>p {
 
 
 @media (max-width: 767px) {
-    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+  .small-1, .small-2, .small-3 {
         float: left;
     }
-    .col-sm-4 {
+    .small-1 {
         width: 33.33%;
     }
-    .col-sm-6 {
+    .small-2 {
         width: 50%;
     }
-    .col-sm-12 {
+    .small-3 {
         width: 100%;
     }
 }
