--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -66,7 +66,20 @@ section>p {
     }
 }
 
-
+@media (min-width: 768px) and (max-width: 991px) {
+    .medium-1, .medium-2, .medium-3 {
+        float: left;
+    }
+    .medium-1 {
+        width: 33.33%;
+    }
+    .medium-2 {
+        width: 50%;
+    }
+    .medium-3 {
+        width: 100%;
+    }
+}
 
 @media (max-width: 767px) {
   .small-1, .small-2, .small-3 {
