--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -41,7 +41,7 @@ section.association>h2 {
 }
 
 section.bens>h2 {
-    background-color: lightblue;
+    background-color: #add8e6;
 }
 
 section>p {
