--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -13,15 +13,15 @@ h1 {
 }
 
 section {
-    border: 1px solid black;
+    border: 0.5px solid black;
     background-color: #808080;
     margin: 10px;
 }
 
 section>h2 {
-    float: left;
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
+    float: right;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
     margin: 0;
     width: 300px;
     text-align: center;
